--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -40,8 +40,8 @@ nav a {
 }
 
 #container {
-  margin: 0 auto;
-  padding-bottom: 2em;
+  margin: auto;
+  padding: 1.5em;
   max-width: 800px;
 }
 
@@ -64,6 +64,10 @@ button {
   height: 1.5em;
   display: none;
   visibility: hidden;
+}
+
+.error {
+  color: red;
 }
 
 @media (max-width: 600px) {
